# llm-practice

./: .gitignore  helloworld.ipynb  pyproject.toml
rag_chatbot/: chatbot_v1.ipynb  chatbot_v2.ipynb
